@@ -44,7 +44,7 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URL;
+import java.net.URI;
 
 import static org.geosdi.geoplatform.connector.pool.builder.v111.WMSConnectorBuilderPoolV111.wmsConnectorBuilderPoolV111;
 import static org.geosdi.geoplatform.connector.server.config.GPPooledConnectorConfigBuilder.PooledConnectorConfigBuilder.pooledConnectorConfigBuilder;
@@ -64,7 +64,7 @@ public class GPWMSConnectorStorePoolV111Test {
     @BeforeClass
     public static void beforeClass() throws Exception {
         wmsServerConnector = wmsConnectorBuilderPoolV111()
-                .withServerUrl(new URL("http://150.145.141.180/geoserver/wms"))
+                .withServerUrl(new URI("http://150.145.141.180/geoserver/wms").toURL())
                 .withPooledConnectorConfig(pooledConnectorConfigBuilder()
                         .withMaxTotalConnections(150)
                         .withDefaultMaxPerRoute(80)
